--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@
     background-color: #222;
     color: #ddd;
 }
+
+/* #image{
+    background: url("https://resize.hswstatic.com/w_907/gif/rabbits-crazy-march-1a.jpg");
+    background-size: cover;
+    background-position: -50px;
+} */
