--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
-*{
+* {
     background-color: #222;
     color: #ddd;
+    box-sizing:border-box
+}
+
+body {
+    text-align: center;
+}
+
+nav {
+    text-align: left;
 }
 
 /* #image{
