add border to section

--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ header, footer {
     text-transform: uppercase;
 }
 
+section {
+    border: 2px dashed red;
+}
+
 /* #image{
     background: url("https://resize.hswstatic.com/w_907/gif/rabbits-crazy-march-1a.jpg");
     background-size: cover;
